<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gift</string>
 	<string name="actionsettings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="username">用户名：</string>
    <string name="password">密码：</string>
    <string name="text">文本</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="about">关于</string>
    <string name="forgive">重设密码</string>
    <string name="oldpwd">原密码</string>
    <string name="confirmpwd">确认密码</string>
    <string name="newpwd">新密码</string>
    <string name="newpassword">请输入新密码</string>
    <string name="oldpassword">请输入原密码</string>
    <string name="submit">提交</string>
    <string name="tishi">请飞飞输入密码</string>
    <string name="qingsong">轻松时刻</string>
    <string name="shu">书山有径</string>
    <string name="sou">搜罗万象</string>
	<string name="lvxin">说走就走</string> 
	<string name="zhenxin">真心的话</string>  
	<string name="hope">期待</string> 
	<string name="menu">上拉显示菜单</string> 
	<string name="title">标题</string> 
	<string name="content">内容</string>
	<string name="save">保存</string>
	<string name="data">2013.10.23 16:07 </string>
	<string name="funning">陪伴你的欢乐时光</string>
	<string name="Otsuge_Uranainandesu">占卜</string>
	<string name="laugh">笑话</string>
	<string name="games">游戏</string>
	<string name="sound">声音</string>
    <string name="gamemusicvolume">游戏音乐音量</string>
    <string name="backmusicvolume">背景音乐音量</string>
    <string name="ok">OK</string>
    <string name="skip">Skip &amp; Play</string>
    <string name="just_skip">skip</string>
    <string name="back">返回</string>
    <string name="share">分享</string>
    <string name="NexTag">next</string>
    <string name="LastTag">last</string>
    <string name="BackTag">back</string>
    <string name="time">所用时间为：$秒</string>
    <string name="quit">退出</string>
    <string name="sure_quit">确定退出游戏？</string>
    <string name="alert_dialog_ok">确定</string>
    <string name="alert_dialog_cancel">取消</string>
    <string name="home_page">http://www.baidu.com</string>
    <string name="forward">前进</string>
    <string name="refresh">刷新</string>
    <string name="bookmark">添加到书签</string>
    <string name="more">更多</string>
    <string name="exit">退出</string>
    <string name="showHistory">查看历史</string>
    <string name="clearHistory">清除历史</string>
    <string name="find">查看书签</string>
</resources>
