<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#FFFFFF" >

   <android.support.v4.view.ViewPager
       android:id="@+id/adv_pager"
       android:layout_width="fill_parent"
       android:layout_height="210dp"
       android:layout_above="@+id/content"
       android:layout_alignParentTop="true" >

    </android.support.v4.view.ViewPager>

     <RelativeLayout
         android:id="@+id/content"
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:background="@drawable/lfypersonal" >

         <Button
             android:id="@+id/button1"
             style="?android:attr/buttonStyleSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignBaseline="@+id/button3"
             android:layout_alignBottom="@+id/button3"
             android:layout_alignParentRight="true"
             android:background="@android:color/transparent"
             android:onClick="glp"
             android:text="@string/NexTag"
             android:textColor="#000000"
             android:textSize="25sp" />

         <Button
             android:id="@+id/button3"
             style="?android:attr/buttonStyleSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
             android:background="@android:color/transparent"
             android:onClick="lfy"
             android:text="@string/LastTag"
             android:textColor="#000000"
             android:textSize="25sp" />

         <Button
             android:id="@+id/button2"
             style="?android:attr/buttonStyleSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignBottom="@+id/button3"
             android:layout_centerHorizontal="true"
             android:background="@android:color/transparent"
             android:onClick="tj"
             android:text="@string/BackTag"
             android:textColor="#000000"
             android:textSize="25sp"/>

     </RelativeLayout>

</RelativeLayout>
